# CryptographyResearch

./: Cargo.toml  README.md  ToDo.md
.github/workflows/: ci.yaml
[Fel87]feldman-verifiable-secret-sharing/: Cargo.toml
[Fel87]feldman-verifiable-secret-sharing/src/: lib.rs
[LFKN90]sum-check/: Cargo.toml
[LFKN90]sum-check/src/: lib.rs
[PLO2]plonky2-factorial/: Cargo.toml
[PLO2]plonky2-factorial/src/: lib.rs
[PLO2]plonky2-fibonacci/: Cargo.toml
[PLO2]plonky2-fibonacci/src/: lib.rs
[Sch91]schnorr-discrete-log-proof-of-knowledge/: Cargo.toml  README.md
[Sch91]schnorr-discrete-log-proof-of-knowledge/src/: lib.rs
[Sha97]shamir-secret-sharing/: Cargo.toml
[Sha97]shamir-secret-sharing/src/: lib.rs
[Tho09]poseidon-hash/: Cargo.toml  README.md
[Tho09]poseidon-hash/reference/hadeshash/: README.md
[Tho09]poseidon-hash/reference/hadeshash/code/: generate_params_poseidon.sage  generate_params_poseidon.sage.py  poseidon_params_n255_t3_alpha3_M128.txt  starkadperm_x5_256_3.sage
[Tho09]poseidon-hash/src/: constants.rs  lib.rs
[rfc1321]message-digest-v5-hash/: Cargo.toml  README.md
[rfc1321]message-digest-v5-hash/src/: lib.rs
halo2-trials/: Cargo.toml
halo2-trials/src/: lib.rs
polynomial/: Cargo.toml
polynomial/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: finitefield.rs  lib.rs  primefield.rs
shamir-secret-sharing/src/: lib.rs
univariate-polynomial-iop-zerotest/: Cargo.toml  README.md
univariate-polynomial-iop-zerotest/src/: lib.rs
zk-plonky2-permutation-circuit/: Cargo.toml
zk-plonky2-permutation-circuit/src/: lib.rs
zk-plonky2-permutation-circuit/src/custom_gates/: switch.rs
zk-plonky2-sudoku/: Cargo.toml
zk-plonky2-sudoku/src/: lib.rs
