[workspace]
members = [
  "primitives",
  "polynomial",
  "univariate-polynomial-iop-zerotest",
  "halo2-trials",
  "[Sha97]shamir-secret-sharing",
  "[Fel87]feldman-verifiable-secret-sharing",
  "[Sch91]schnorr-discrete-log-proof-of-knowledge",
  "[PLO2]plonky2-fibonacci",
  "[PLO2]plonky2-factorial",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[workspace.dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-crypto-primitives = "0.4.0"
num-traits = "0.2.18"
nalgebra = "0.32.5"
halo2 = "0.0.0"
halo2_proofs = "0.3.0"
rand_core = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
simba = "0.8.1"
