[package]
edition = "2021"
name = "feldman-verifiable-secret-sharing"
version = "0.1.0"

[dependencies]
polynomial = { path = "../polynomial" }
rand = { workspace = true }
rand_chacha = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
