[package]
edition = "2021"
name = "feldman-verifiable-secret-sharing"
version = "0.1.0"

[dependencies]
shamir-secret-sharing = { path = "../[Sha97]shamir-secret-sharing" }
num-traits = { workspace = true }
simba = { workspace = true }
polynomial = { path = "../polynomial" }
rand = { workspace = true }
rand_chacha = { workspace = true }
ark-ff = { workspace = true }
